pkg/controller/appdefinition/testdata/ingress/prefix/prefix-2/expected.yaml.d/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: con1
  namespace: app-created-namespace
  labels:
    "acorn.io/app-name": "app-name"
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/container-name": "con1"
    "acorn.io/managed": "true"
    "allconsl1": "value"
    "conl1": "value"
    "conl3": "value"
    "globall1": "value"
    "globall2": "value"
  annotations:
    "allconsa1": "value"
    "cona1": "value"
    "cona3": "value"
    "globala1": "value"
    "globala2": "value"
spec:
  selector:
    matchLabels:
      "acorn.io/app-namespace": "app-namespace"
      "acorn.io/app-name": "app-name"
      "acorn.io/container-name": "con1"
      "acorn.io/managed": "true"
  template:
    metadata:
      labels:
        "acorn.io/app-namespace": "app-namespace"
        "acorn.io/app-name": "app-name"
        "acorn.io/container-name": "con1"
        "acorn.io/managed": "true"
        "port-number.acorn.io/81": "true"
        "service-name.acorn.io/con1": "true"
        "allconsl1": "value"
        "conl1": "value"
        "conl3": "value"
        "globall1": "value"
        "globall2": "value"
      annotations:
        acorn.io/container-spec: '{"annotations":{"cona3":"value"},"image":"test","labels":{"conl3":"value"},"ports":[{"port":80,"protocol":"http","publish":true,"targetPort":81}],"probes":null}'
        "allconsa1": "value"
        "cona1": "value"
        "cona3": "value"
        "globala1": "value"
        "globala2": "value"
    spec:
      terminationGracePeriodSeconds: 5
      hostname: con1
      enableServiceLinks: false
      serviceAccountName: acorn
      imagePullSecrets:
        - name: con1-pull-newuid123456
      containers:
        - name: con1
          image: "test"
          readinessProbe:
            tcpSocket:
              port: 81
          ports:
          - containerPort: 81
            protocol: "TCP"
