pkg/controller/appdefinition/testdata/ingress/prefix/prefix-2/expected.yaml.d/service.yaml
kind: ServiceInstance
apiVersion: internal.acorn.io/v1
metadata:
  name: con1
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "con1"
    "acorn.io/managed": "true"
    "acorn.io/public-name": "app-name.con1"
spec:
  default: true
  appName: app-name
  appNamespace: app-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "con1"
    "acorn.io/managed": "true"
    "allconsl1": "value"
    "conl1": "value"
    "conl3": "value"
    "globall1": "value"
    "globall2": "value"
  annotations:
    "allconsa1": "value"
    "cona1": "value"
    "cona3": "value"
    "globala1": "value"
    "globala2": "value"
  container: con1
  ports:
    - port: 80
      targetPort: 81
      publish: true
      protocol: http
      name: "80"
