pkg/controller/appdefinition/testdata/ingress/prefix/prefix-2/expected.yaml.d/serviceaccount.yaml
kind: ServiceAccount
apiVersion: v1
metadata:
  name: con1
  namespace: app-created-namespace
  labels:
    acorn.io/app-name: app-name
    acorn.io/app-namespace: app-namespace
    acorn.io/container-name: con1
    acorn.io/managed: "true"
    allconsl1: value
    conl1: value
    conl3: value
    globall1: value
    globall2: value
  annotations:
    allconsa1: value
    cona1: value
    cona3: value
    globala1: value
    globala2: value
